# polymorphic_base_type

./: .gitignore  CMakeLists.txt  drawtest.h  drawtest_test.cpp  main.cpp  mm
src/: CMakeLists.txt  object.cpp  object.h
tests/unit_tests/: CMakeLists.txt  main.cpp  object_test.cpp
